kubernetes/apps/shared/security/oauth2-proxy/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: security
spec:
  ingressClassName: nginx
  rules:
  - host: "oauth.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "oauth.${DOMAIN}"
